# win_event_hook

./: Cargo.toml  README.md
.github/workflows/: CD.yml  CI.yml
crates/win_event_cli/: Cargo.toml
crates/win_event_cli/src/: main.rs
crates/win_event_hook/: CHANGELOG.md  Cargo.toml
crates/win_event_hook/src/: config.rs  errors.rs  event_loop.rs  events.rs  flags.rs  handler.rs  handles.rs  hook.rs  lib.rs
