[package]
name = "win_event_cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
win_event_hook = { path = "../win_event_hook", version = "*" }
ctrlc = "3.4.0"
