[package]
name = "win_event_cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
win_event_hook = { path = "../win_event_hook", version = "*" }
ctrlc = "3.5.2"
