[package]
name = "win_event_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
lazy_static = "1.4.0"
rayon = "1.7.0"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    # SetWinEventHook
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    # Event constants
    "Win32_UI_WindowsAndMessaging",
    # GetCurrentThreadId
    "Win32_System_Threading"
]
