[package]
name = "win_event_hook"
publish = true
version = "0.4.1"
edition = "2021"
authors = ["Ben <ben+crates@bengreenier.com>"]
description = "A safe rust API for using SetWinEventHook, powered by the windows crate"
license = "MIT"
documentation = "https://docs.rs/win_event_hook"
readme = "../../README.md"
repository = "https://github.com/bengreenier/win_event_hook"
keywords = ["windows", "api"]
categories = ["api-bindings", "os", "os::windows-apis"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
bitflags = "2.3"
lazy_static = "1.4"
rayon = "1.7"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    # SetWinEventHook
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    # Event constants
    "Win32_UI_WindowsAndMessaging",
    # GetCurrentThreadId
    "Win32_System_Threading",
]
